# ZoneBuffer

./: .clang-format  CMakeLists.txt  Makefile  README.md  link.h  log_file  main.cpp  zbuf
include/: buffer.h  common.h  datastructure.h  parameter.h  zBuffer.h  zController.h  zalp.h  zalplru.h
output/: 0_19_17_26  0_19_23_0  0_20_13_30  0_20_14_39  0_20_14_5  0_20_15_16  0_20_16_6  0_20_1_16  0_24_19_32  111160  1111614  1112110  1112253  1112347  11_10_10_35  11_13_12_45  11_13_13_50  11_13_15_17  11_13_15_54  11_13_16_10  11_13_16_28  11_13_16_59  11_13_17_18  11_13_17_5  11_14_15_55  11_14_16_36  11_18_11_51  11_18_15_58  11_18_15_8  11_18_17_5  11_18_19_50  11_19_10_26  11_19_11_3  11_19_11_33  11_19_9_58  11_8_18_43  11_9_16_53  11_9_22_27  1_14_13_25  1_14_13_43  (+87 more)
src/: CMakeLists.txt  buffer.cpp  common.cpp  datastructure.cpp  zBuffer.cpp  zController.cpp  zalp.cpp  zalplru.cpp
